syntax = "proto3";

option csharp_namespace = "InteractReef.Grpc.Roles";

import "google/protobuf/empty.proto";
import "Protos/Base.proto";

service RoleGrpcService{
	rpc IsStudent(IdListRequest) returns (BoolResponse);
	rpc IsAdmin(IdRequest) returns (BoolResponse);
	rpc IsEmployee(IdListRequest) returns (BoolResponse);

	rpc SetAdmin(IdRequest) returns (GrpcResponse);
	rpc SetEmployee(IdListRequest) returns (GrpcResponse);
	rpc SetStudent(IdListRequest) returns (GrpcResponse);
}